@@ -714,26 +714,30 @@ class TestTopologyGuessed(object):
                            guessed=True)
 
     @pytest.fixture()
-    def top(self, names, types, resids, resnames):
-        return Topology(n_atoms=3, n_res=1,
-                        attrs=[names, types, resids, resnames])
+    def bonds(self):
+        return ta.Bonds([(1, 2), (2, 3)], guessed=False)
 
-    def test_guessed(self, names, types, resids, resnames, top):
+    @pytest.fixture()
+    def top(self, names, types, resids, resnames, bonds):
+        return Topology(n_atoms=3, n_res=1,
+                        attrs=[names, types, resids, resnames, bonds])
+
+    def test_guessed(self, names, types, resids, resnames, bonds, top):
         guessed = top.guessed_attributes
 
         assert types in guessed
         assert resnames in guessed
         assert not names in guessed
         assert not resids in guessed
+        assert bonds not in guessed
 
-    def test_read(self, names, types, resids, resnames, top):
+    def test_read(self, names, types, resids, resnames, bonds, top):
         read = top.read_attributes
-
         assert names in read
         assert resids in read
+        assert bonds in read
         assert not types in read
         assert not resnames in read
-
 
 class TestTopologyCreation(object):
     def test_make_topology_no_attrs(self):
